GraphicsContext3D::activeTexture should not be called with zero-based index https://bugs.webkit.org/show_bug.cgi?id=148020

Patch by Jinyoung Hur <hur.ims@navercorp.com> on 2015-08-19
Reviewed by Alex Christensen.

Source/WebCore:

GraphicsContext3D::activeTexture should be called with an argument that is greater than or equal to
GraphicsContext3D::TEXTURE0.

Test: fast/canvas/webgl/texture-complete.html

* html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::checkTextureCompleteness):

LayoutTests:

Insert WebGLRenderingContext.activeTexture call during the texture complete test to verify
a meaningless change of the active texture doesn't make any gl errors.

* fast/canvas/webgl/texture-complete.html:

Canonical link: https://commits.webkit.org/166323@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188666 268f45cc-cd09-0410-ab3c-d52691b4dbfc